# ALC

./: .gitattributes  CMakeLists.txt  DGraph.cpp  DGraph.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  LabelSet.cpp  LabelSet.h  README.md  Splitedgraphs.cpp  Splitedgraphs.h  Subgraphs.cpp  Subgraphs.h  Vertex.cpp  Vertex.h  copy   main.cc  main.cpp  run.cpp
Samples/: V1kD3L8exp.edge0.false  V1kD3L8exp.edge0.true  V1kD3L8exp.edge1.false  V1kD3L8exp.edge1.true  V1kD3L8exp.edge2.false  V1kD3L8exp.edge2.true
graph_generator/: V0kD2L2exp.edge  V0kD3L2exp.edge  V1kD5L8exp.edge  V5kD3L18exp.edge  V5kD5L10exp.edge  V5kD5L18exp.edge  V5kD5L8exp.edge  graph_generator.py
graph_maintenance/: DGraph.h  Graph.h
query_generation/: BFS_index.cpp  BFS_index.h  a.out  index.h  query_generator.cc
